src/snapshots/jsonptr__assign__json__tests__run-22.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data: ~
  ptr: /-
  assign: 34
---
Ok(
    Some(
        Null,
    ),
)
