src/snapshots/jsonptr__assign__json__tests__run-23.snap
---
source: src/assign.rs
description: asserting that the json data is as expected after assignment
info:
  data:
    foo: bar
  ptr: /foo/-
  assign: baz
---
{"foo":["baz"]}
