src/snapshots/jsonptr__assign__json__tests__run-27.snap
---
source: src/assign.rs
description: asserting that the json data is as expected after assignment
info:
  data: ~
  ptr: /1
  assign: foo
---
{"1":"foo"}
