src/snapshots/jsonptr__assign__json__tests__run-28.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data: ~
  ptr: /1
  assign: foo
---
Ok(
    Some(
        Null,
    ),
)
