src/snapshots/jsonptr__assign__json__tests__run-3.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data: {}
  ptr: /foo/-/bar
  assign: baz
---
Ok(
    None,
)
