src/snapshots/jsonptr__assign__json__tests__run-30.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data: []
  ptr: /0
  assign: foo
---
Ok(
    None,
)
